@@ -55,7 +55,7 @@ class DefaultMetadataResult implements MetadataResult {
 
         List<String> versions = metadata.getCompatVersions();
         if (versions.isEmpty()) {
-            versions = Collections.singletonList(Artifact.DEFAULT_VERSION);
+            versions = List.of(Artifact.DEFAULT_VERSION);
         }
 
         Set<Artifact> artifactSet = new LinkedHashSet<>();
